Add NanoPi R3S/R3S LTS/R76S/M5

--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,44 @@
 						<div class="col-md-6"><img src="images/sbc_images/nanopir2s.jpg" alt="NanoPi R2S photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<div id="nanopir3s" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R3S</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3566 1.8 GHz | 4 cores | ARMv8</div>
+								<div><span>RAM:</span>2 GiB LPDDR4X</div>
+								<div><span>USB:</span>1x 3.0 Type A</div>
+								<div><span>NET:</span>2x Gbit Ethernet</div>
+								<div><span>Storage:</span>microSD, optional 32 GiB onboard eMMC</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR3S-ARMv8-Trixie.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR3S-ARMv8-Trixie.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR3S-ARMv8-Trixie.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A successor or the NanoPi R2S, with newer faster SoC, doubled RAM size, USB 3.0 and optional onboard eMMC storage.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopir3s.jpg" alt="NanoPi R3S photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<div id="nanopir3slts" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R3S LTS</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3566 1.8 GHz | 4 cores | ARMv8</div>
+								<div><span>RAM:</span>1-2 GiB LPDDR4X</div>
+								<div><span>USB:</span>1x 3.0 Type A</div>
+								<div><span>NET:</span>2x Gbit Ethernet</div>
+								<div><span>Storage:</span>microSD, optional 32 GiB onboard eMMC</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR3SLTS-ARMv8-Trixie.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR3SLTS-ARMv8-Trixie.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR3SLTS-ARMv8-Trixie.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A variant of the NanoPi R3S with additional HDMI and DSI camera port.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopir3slts.jpg" alt="NanoPi R3S LTS photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<div id="nanopik2" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi K2</h3><span class="close"></span></div></div>
 					<div class="row">
@@ -1230,6 +1268,44 @@
 							<p>A smaller variant of the FriendlyELEC NanoPi R5 series, with 2 Ethernet adapters and an M.2 E-key socket for WiFi/Bluetooth modules.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/nanopir5c.jpg" alt="NanoPi R5C photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<div id="nanopir76s" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R76S</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3576 2.0/2.2 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>2 GiB LPDDR4X - 16 GiB LPDDR5</div>
+								<div><span>USB:</span>1x 3.0 Type A</div>
+								<div><span>NET:</span>2x 2.5 Gbit Ethernet + M.2 WiFi socket</div>
+								<div><span>Storage:</span>microSD, optional 32-64 GiB onboard eMMC</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR76S-ARMv8-Trixie.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR76S-ARMv8-Trixie.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR76S-ARMv8-Trixie.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>Successor of the NanoPi R5C with faster octa-core SoC and optionally larger LPDDR5 RAM.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopir76s.jpg" alt="NanoPi R76S photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<div id="nanopim5" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi M5</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3576 2.0/2.2 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB LPDDR4X - 16 GiB LPDDR5</div>
+								<div><span>USB:</span>2x 3.0 Type A</div>
+								<div><span>NET:</span>2x 2.5 Gbit Ethernet + M.2 WiFi socket</div>
+								<div><span>Storage:</span>microSD, UFS and M.2 NVMe sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiM5-ARMv8-Trixie.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiM5-ARMv8-Trixie.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiM5-ARMv8-Trixie.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>Similar to the NanoPi R76S, without onboard eMMC storage, but with UFS and M.2 NVMe sockets, 2x USB, audio jack, and 30-pin GPIO header. An onboard SPI flash allows booting from NVMe and USB.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopim5.jpg" alt="NanoPi M5 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<!-- NanoPi R6S -->
@@ -1999,6 +2075,34 @@
 							<img src="images/sbc_images/asustinkerboard2.jpg" alt="ASUS Tinker Board 2 photo" width="8" height="5" loading="lazy">
 							<h3>ASUS Tinker Board 2</h3>
 							<p>RK3399 1.8GHz | 6 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<a href="#downloadinfo" class="thumbnail" rel="#nanopir3s">
+							<img src="images/sbc_images/nanopir3s.jpg" alt="NanoPi R3S photo" width="8" height="5" loading="lazy">
+							<h3>NanoPi R3S</h3>
+							<p>RK3566 1.8GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<a href="#downloadinfo" class="thumbnail" rel="#nanopir3slts">
+							<img src="images/sbc_images/nanopir3slts.jpg" alt="NanoPi R3S LTS photo" width="8" height="5" loading="lazy">
+							<h3>NanoPi R3S LTS</h3>
+							<p>RK3566 1.8GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<a href="#downloadinfo" class="thumbnail" rel="#nanopir76s">
+							<img src="images/sbc_images/nanopir76s.jpg" alt="NanoPi R76S photo" width="8" height="5" loading="lazy">
+							<h3>NanoPi R76S</h3>
+							<p>RK3576 2.2GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<a href="#downloadinfo" class="thumbnail" rel="#nanopim5">
+							<img src="images/sbc_images/nanopim5.jpg" alt="NanoPi M5 photo" width="8" height="5" loading="lazy">
+							<h3>NanoPi M5</h3>
+							<p>RK3576 2.2GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
