--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.18 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>Support for the new SBCs NanoPi R3S, R3S LTS, R76S and M5 has been added. The ebook/audiobook collection manager LazyLibrarian has been added to our software catalogue, and the DietPi-Dashboard received a major rework.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_18/" target="_blank" rel="noopener">Release notes</a>
-					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_18.webp" alt="The image shows a futuristic room in comic art style with a violet to cyan colour scheme. There is a library bookshelf at the left wall with a sleeping robot sitting and leaning against it. The centre of the image shows a holographic screen showing some dashboard, attached to two computer systems below it. At the right side there is a single-board computer, attached to the other computers, with a Pi (number) sign and a small &quot;n&quot; in a cycle on it." width="360" height="240" loading="lazy"></div>
+					<h2>Open Beta v9.19</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>The BirdNET-Go bird song monitoring and identification system has been added to software catalogue. The dietpi-banner received an option to word-wrap lines with better indentation for small screens.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7805" target="_blank" rel="noopener">All info</a>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
