Add v9.19 release slide

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>Open Beta v9.19</h2>
-					<h4>Please help testing our upcoming release</h4>
-					<p>The BirdNET-Go bird song monitoring and identification system has been added to software catalogue. The dietpi-banner received an option to word-wrap lines with better indentation for small screens.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7805" target="_blank" rel="noopener">All info</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
+					<h2>DietPi v9.19 has been released</h2>
+					<h4>Check out all changes</h4>
+					<p>BirdNET-Go birdsong monitoring + identification system added to our software catalogue; UrBackup now installed via APT repo; New dietpi-banner option to word-wrap with consistent indentation for small screens</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_19/" target="_blank" rel="noopener">Release notes</a>
+					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_19.webp" alt="The image shows a futuristic room with a large window in the back. One can see a tree with 4 singing birds through the window. Inside of the room is a table with a microphone close to the window, connected to a single-board computer on the right side of the image. Above is a holographic screen which shows audio waves on the left, mapped to birds on the right side of the screen." width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
