Add v9.20 release slide

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>Open Beta v9.20</h2>
-					<h4>Please help testing our upcoming release</h4>
+					<h2>DietPi v9.20 has been released</h2>
+					<h4>Check out all changes</h4>
 					<p>The RustDesk signalling/relay server has been added to our software catalogue. We added Portainer BE support and fixed updates via reinstall. Orange Pi 5 Max+Ultra have now all their USB-A ports enabled in host mode.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7854" target="_blank" rel="noopener">All info</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_20/" target="_blank" rel="noopener">Release notes</a>
+					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_20.webp" alt="The image shows a futuristic environment with two single-board computers, each with a screen attached. The screen on the right side shows the desktop of the other screen in a window, indicating a remote desktop session. 5 Christmas elves can be seen, one of them tinkering on a port of the left-side single-board computer, anther one pointing at or touching the right-side screen. Some snow flakes decorate the image." width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
